# aiff-rs

./: .gitignore  Cargo.toml  README.md
examples/: parse.rs  play.rs
src/: chunks.rs  extended.rs  ids.rs  lib.rs  main.rs  reader.rs  samples.rs
src/chunks/: ids.rs  mod.rs  reader.rs
