[package]
name = "aiff"
version = "0.1.0"
authors = ["Julien Tregoat <jules@jules.nyc>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust_decimal = "1.0.2"

[dependencies.bytes]
version = "0.4.12"
features = ["i128"]

[dev-dependencies]
cpal = "0.10.0"