[package]
name = "aiff"
version = "0.1.0"
authors = ["Julien Tregoat <jules@jules.nyc>"]
description = "AIFF codec"
edition = "2018"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/julientregoat/aiff-rs"
repository = "https://github.com/julientregoat/aiff-rs"
keywords = ["aiff", "pcm", "audio", "codec", "encoder", "decoder"]

[dependencies]
rust_decimal = "1.0.2"

[dependencies.bytes]
version = "0.4.12"
features = ["i128"]

[dev-dependencies]
cpal = "0.11.0"

# used with cargo-run-script
[package.metadata.scripts]
fmt = "cargo +nightly fmt"