[package]
name = "aiff"
version = "0.1.0"
authors = ["Julien Tregoat <jules@jules.nyc>"]
description = "AIFF codec"
edition = "2018"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/julientregoat/aiff-rs"
repository = "https://github.com/julientregoat/aiff-rs"
keywords = ["aiff", "pcm", "audio", "codec", "encoder", "decoder"]

[dependencies]
id3 = "0.5.1"
bytes = "0.5.4"
seek_bufread = "1.2.2"
# dynstack = "0.4.0" # interesting option for maintaining chunks

[dev-dependencies]
cpal = "0.11.0"

# used with cargo-run-script
[package.metadata.scripts]
test = "cargo test -- --nocapture"
fmt = "cargo +nightly fmt"